backgroung image added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link href="css/form.css" rel="stylesheet" />
     <script defer src="js/script.js"></script>
   </head>
-  <body>
+  <body class="element">
     <div>
       <form class="form js-form">
         <fieldset class="form__fieldset">
